syntax = "proto3";

import 'pi2schema/encrypted_personal_data.proto';
import 'pi2schema/subject.proto';

package com.acme;

message MissingSubjectIdentifierAnnotation {

  string uuid = 1;

  oneof personal_data {

    string email = 3;
    pi2schema.EncryptedPersonalData encryptedPersonalData = 4;

  }
}


message MultipleSiblingsSubjectIdentifiers {

  string uuid1 = 1[(.pi2schema.subject_identifier) = true];

  string uuid2 = 2[(.pi2schema.subject_identifier) = true];

  oneof personal_data {

    string email = 3;
    pi2schema.EncryptedPersonalData encryptedPersonalData = 4;

  }

}