syntax = "proto3";

package com.acme;

import 'google/protobuf/timestamp.proto';

import 'pi2schema/encrypted_personal_data.proto';
import 'pi2schema/subject.proto';

message FarmerRegisteredEvent {

  string uuid = 1 [(.pi2schema.subject_identifier) = true];

  oneof personal_data {
    ContactInfo contact_info = 2;
    pi2schema.EncryptedPersonalData encryptedPersonalData = 3;
  }

  google.protobuf.Timestamp registeredAt = 4;
  string referer = 5;

}

message ContactInfo {
  string name = 1;
  string phone_number = 2;
  string email = 3;
}